src/app.css
/* Mono */
@font-face {
  font-family: "PaperMono";
  src: url("$lib/fonts/PaperMono-Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

/* Sans (Variable Font) */
@font-face {
  font-family: "CalSansUI";
  src: url("$lib/fonts/CalSansUI[MODE,wght].woff2") format("woff2");
  font-weight: 300 700;
  font-style: normal;
  font-display: swap;
}

/* Heading */
@font-face {
  font-family: "CalSansHeading";
  src: url("$lib/fonts/CalSans-SemiBold.woff2") format("woff2");
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

:root {
  --font-heading: "CalSansHeading", sans-serif;
  --font-sans: "CalSansUI", sans-serif;
  --font-mono: "PaperMono", monospace;
}

@import "$lib/components/ui/global.css";

@layer base {
  @supports (font: -apple-system-body) and (-webkit-appearance: none) {
    [data-wrapper] {
      @apply min-[1800px]:border-t;
    }
  }

  a:active,
  button:active {
    @apply opacity-72 md:opacity-100;
  }
}

